# franka-llm

./: .gitignore  PICK_PLACE_INTEGRATION.md  QUICKSTART.md  README.md  RENAMING_RATIONALE.md  REORGANIZATION.md  THESIS_GOALS.md  camera_calibration.py  check_vlm_health.py  config.yaml  find_pixel_loc.py  main.tex  rotation_vector.pkl  test_full_pick.md  todo.md  transform_to_robot.py  translational_vector.pkl
docs/: VLM_ONLY_PICK_AND_PLACE.md  architecture.md  evaluation.md  literature-review-and-roman2026.md  ros_topics.md  setup.md  ui-review-and-hri-analysis.md
sections/: acknowledgments.tex  appendix.tex  bibliography.tex  conclusions.tex  experiment.tex  introduction.tex  methodology.tex  related_work.tex  system_design.tex
src/: LEARNING_PATH.md  cmd.txt  isaac_ros_packages_guide.md  ros2_jetson_guide.md  ros2_learning_guide.md  simple_terminal_chat.py  test_depth_center_pixel.py  test_vlm_grounding.py
src/franka_coordinator/: package.xml  setup.cfg  setup.py
src/franka_coordinator/franka_coordinator/: __init__.py  aruco_coordinate_transformer.py  coordinate_transformer.py  coordinator_node.py  test_coordinate_transform.py  web_handler.py
src/franka_llm_planner/: README.md  SUMMARY.md  package.xml  setup.cfg  setup.py
src/franka_llm_planner/franka_llm_planner/: __init__.py  demo.py  llm_coordinator_node.py  llm_node.py  move_func.py  simple_arm.py  simple_control.py  simple_move.py  task_publisher.py  task_subscriber.py  vlm_image_analyzer.py  vlm_tester.py
src/franka_motion_executor/: README.md  package.xml  setup.cfg  setup.py
src/franka_motion_executor/franka_motion_executor/: __init__.py  demo.py  motion_executor_node.py
src/franka_motion_executor/franka_motion_executor/moveit/: __init__.py  manipulation_tasks.py  moveit_helpers.py  robot.py
src/franka_vision_detection/: README_TABLE_DETECTOR.md  package.xml  setup.cfg  setup.py
src/franka_vision_detection/franka_vision_detection/: __init__.py  table_detector.py  table_detector_finetuner.py
src/franka_vision_detection/launch/: table_detector.launch.py
src/franka_vlm_agent/: README.md  VLM_QUICKSTART.md  VLM_SETUP.md  package.xml  quick_start_vlm.sh  setup.cfg  setup.py  setup_ollama_jetson.sh
src/franka_vlm_agent/franka_vlm_agent/: README_REFACTOR.md  __init__.py  depth_utils.py  image_utils.py  view_vlm_output.py  vlm_api_client.py  vlm_node.py  vlm_test.py  vlm_test_image.py
src/franka_vlm_agent/launch/: vlm.launch.py
src/realsense_cameras/: README.md  package.xml  setup.cfg  setup.py
src/realsense_cameras/launch/: camera_tf.launch.py  cameras.launch.py  ee_camera.launch.py  fixed_camera.launch.py
src/realsense_cameras/new_calibration/: camera_calibration.py  convert_calibration.py  rotation_vector.pkl  test_transform.py  transform_to_robot.py  translational_vector.pkl
src/realsense_cameras/realsense_cameras/: camera_hub.py
src/realsense_cameras/scripts/: record_arm_camera.py
ui/web_chat_dashboard/: README.md  WEB_INTEGRATION.md  app.js  index.html  rosbridge.js  styles.css
ui/web_chat_dashboard/modules/: camera.js  chat.js  confirm.js  status.js  utils.js
