<?xml version="1.0"?>
<package format="3">
  <name>franka_llm_planner</name>
  <version>0.1.0</version>
  <description>LLM Task Planner for Franka</description>
  <maintainer email="ghasemzadehh.arash@gmail.com">arash</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
