<?xml version="1.0"?>
<package format="3">
  <name>franka_llm_planner</name>
  <version>0.1.0</version>
  <description>LLM Task Planner for Franka Research 3 with MoveIt2 (ROS2 Jazzy)</description>
  <maintainer email="ghasemzadehh.arash@gmail.com">arash</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- MoveIt2 Dependencies -->
  <depend>moveit</depend>
  <depend>moveit-core</depend>
  <depend>moveit-ros-planning-interface</depend>
  <depend>moveit-msgs</depend>
  
  <!-- Transform Dependencies -->
  <depend>tf2</depend>
  <depend>tf2-geometry-msgs</depend>

  <!-- Franka Dependencies -->
  <depend>franka-msgs</depend>
  <depend>trajectory-msgs</depend>
  
  <!-- Additional Dependencies -->
  <depend>python3-scipy</depend>
  <depend>shape-msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
