<?xml version="1.0"?>
<package format="3">
  <name>franka_vlm_agent</name>
  <version>0.1.0</version>
  <description>VLM (Vision Language Model) Agent for Franka - LLaVA 7B on Jetson</description>
  <maintainer email="ghasemzadehh.arash@gmail.com">arash</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv-bridge</depend>
  <depend>python3-requests</depend>
  <depend>python3-pillow</depend>
  <depend>python3-opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
